carecredit banner in financing

--- a/financing.html
+++ b/financing.html
@@ -89,7 +89,7 @@
 
 			  <p class="autop">Apply quickly and easily at the link below:</p>
 
-			  <img src="images/carecred-banner.gif" alt="New Orleans discount laser vision correction" />
+			  <a href="https://www.carecredit.com/apply/confirm.html?light=1&encm=VTRXbgZkUzZWagxoBjMLYlZmUTECZwA3DmsDM1cyU24%3D"><img src="images/carecred-banner.gif" alt="New Orleans discount laser vision correction" /></a>
 
     			</div>
     		</div>
