--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     					(866) 42-LASIK <br />
     				</span>
     				<div id="logo"><img src="./images/logo.jpg" alt="Dr. Singers Logo"></div>
-    				<span id="logoText">Jeffery Singer, M.D., APMC</span>
+    				<span id="logoText">Jeffrey Singer, M.D., APMC</span>
     				<h1 id="subLogoText">Louisiana Laser Vision Correction</h1>
     				<div id="navBar">
     					<ul>
