header logo jpg -> png

--- a/aboutDrBrint.html
+++ b/aboutDrBrint.html
@@ -46,7 +46,7 @@
     					(504) 456-3155 <br />
     					(866) 42-LASIK <br />
     				</span>
-    				<div id="logo"><img src="./images/logo.jpg" alt="Dr. Singers Logo"></div>
+    				<div id="logo"><img src="./images/logo.png" alt="Dr. Singers Logo"></div>
     				<span id="logoText">Jeffery Singer, M.D., APMC</span>
     				<h1 id="subLogoText">Louisiana Laser Vision Correction</h1>
     				<div id="navBar">
