--- a/aboutDrSinger.html
+++ b/aboutDrSinger.html
@@ -47,7 +47,7 @@
     					(866) 42-LASIK <br />
     				</span>
     				<div id="logo"><img src="./images/logo.png" alt="Dr. Singers Logo"></div>
-    				<span id="logoText">Jeffery Singer, M.D., APMC</span>
+    				<span id="logoText">jeffrey Singer, M.D., APMC</span>
     				<div id="navBar">
     					<ul>
     						<li class="currentPage"><a href="index.html">Main</a></li>
