--- a/contactUs.html
+++ b/contactUs.html
@@ -67,7 +67,7 @@
     					<div id="faceBook">
     						<iframe src="http://www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2FDrJeffreySinger&amp;width=292&amp;height=170&amp;colorscheme=light&amp;show_faces=true&amp;border_color&amp;stream=false&amp;header=false&amp;appId=194314177311526" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:292px; height:170px;" allowTransparency="true"></iframe>
     					</div>
-    					<div id="financing"><img src="./images/carecred.gif" alt="Care Cred Financing" /></div>
+    					<div id="financing"><a href="https://www.carecredit.com/apply/confirm.html?light=1&encm=VTRXbgZkUzZWagxoBjMLYlZmUTECZwA3DmsDM1cyU24%3D" alt="care cred financing"><img src="./images/carecred.gif" alt="Care Cred Financing" /></a></div>
     				<div id="featureArea"><img src="./images/featuredImage.jpg" alt="Dr. Singer" /></div>
     			</div>
     		</div>
