--- a/singerAndStaff.html
+++ b/singerAndStaff.html
@@ -47,7 +47,7 @@
     					(866) 42-LASIK <br />
     				</span>
 
-    				<div id="logo"><img src="./images/logo.png" alt="Dr. Singers Logo"></div>
+    				<div id="logo"><a href="index.html"><img src="./images/logo.png" alt="Dr. Singers Logo"></a></div>
 
     				<span id="logoText">Jeffrey Singer, M.D., APMC</span>
     				<h1 id="subLogoText">Louisiana Laser Vision Correction</h1>
