--- a/contactUs.html
+++ b/contactUs.html
@@ -46,8 +46,8 @@
     					(504) 456-3155 <br />
     					(866) 42-LASIK <br />
     				</span>
-    				<div id="logo"><img src="./images/logo.png" alt="Dr. Singers Logo"></div>
-    				<span id="logoText">jeffrey Singer, M.D., APMC</span>
+    				<div id="logo"><a href="index.html"><img src="./images/logo.png" alt="Dr. Singers Logo"></a></div>
+    				<span id="logoText">Jeffrey Singer, M.D., APMC</span>
     				<h1 id="subLogoText">Louisiana Laser Vision Correction</h1>
     				<div id="navBar">
     					<ul>
