capital LASIK, other stuff

--- a/aboutDrBrint.html
+++ b/aboutDrBrint.html
@@ -6,9 +6,9 @@
         <title>Dr. Jeffrey Singer | New Orleans LASIK</title>
         
         <meta charset="utf-8">
-        <meta name="description" content="New Orleans Lasik">
-        <meta name="keywords" content="New Orleans Lasik">
-        <meta name="author" content="New Orleans Lasik">
+        <meta name="description" content="New Orleans LASIK">
+        <meta name="keywords" content="New Orleans LASIK">
+        <meta name="author" content="New Orleans LASIK">
         
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<script src="http://cdn.jquerytools.org/1.2.6/full/jquery.tools.min.js"></script>
@@ -84,9 +84,9 @@
 
 			  <img src="images/Brint.jpg" class="floatRight">
 
-			  <p class="autop">Dr. Brint was the first physician in the United States to perform the Lasik procedure in June 1991, after working with Dr. Lucio Buratto in Milan to perfect the technique. He was the medical monitor of the first US FDA Lasik study and has been a lead investigator for both the Alcon Custom Cornea Lasik procedure as well as the Medical Monitor for all of the US FDA Wavelight Allegretto Wavefront Optimized and Custom Studies. He graduated from Tulane University School of Medicine, New Orleans, Louisiana and completed his residency there as well in 1977, continuing to serve as Associate Clinical Professor of Ophthalmology. In addition to his vast Lasik experience of over 30,000 Lasik procedures, many with the Intralase All Laser Lasik technique, he is a renowned cataract/lens surgeon, having participated in the FDA clinical trials of the new intraocular lenses including ReSTOR and ReZOOM, which typically allow the patient to have excellent vision both distance and near without glasses after cataract or lens extraction.</p>
+			  <p class="autop">Dr. Brint was the first physician in the United States to perform the LASIK procedure in June 1991, after working with Dr. Lucio Buratto in Milan to perfect the technique. He was the medical monitor of the first US FDA LASIK study and has been a lead investigator for both the Alcon Custom Cornea LASIK procedure as well as the Medical Monitor for all of the US FDA Wavelight Allegretto Wavefront Optimized and Custom Studies. He graduated from Tulane University School of Medicine, New Orleans, Louisiana and completed his residency there as well in 1977, continuing to serve as Associate Clinical Professor of Ophthalmology. In addition to his vast LASIK experience of over 30,000 LASIK procedures, many with the Intralase All Laser LASIK technique, he is a renowned cataract/lens surgeon, having participated in the FDA clinical trials of the new intraocular lenses including ReSTOR and ReZOOM, which typically allow the patient to have excellent vision both distance and near without glasses after cataract or lens extraction.</p>
 
-<p class="autop">He is Board Certified by the American Board of Ophthalmology and a Fellow of the American College of Surgeons. He has been recognized as “The Best Doctor in New Orleans” by New Orleans Magazine, and has been selected by his peers for the 2000 – 2007 editions of <strong>The Best Doctors in America</strong>. Dr Brint is a leading Vision Correction Lecturer and the author of the three definitive textbooks on Lasik including the most recent <strong>Custom Lasik.</strong></p>
+<p class="autop">He is Board Certified by the American Board of Ophthalmology and a Fellow of the American College of Surgeons. He has been recognized as “The Best Doctor in New Orleans” by New Orleans Magazine, and has been selected by his peers for the 2000 – 2007 editions of <strong>The Best Doctors in America</strong>. Dr Brint is a leading Vision Correction Lecturer and the author of the three definitive textbooks on LASIK including the most recent <strong>Custom LASIK.</strong></p>
 
 <p class="autop">Dr. Brint performs surgery and lectures around the world including, Europe, Russia, China, Japan, Australia, Singapore, Africa and South America.</p>
 
@@ -111,7 +111,7 @@
     				</form>			
     				</div>
  					<div id="footerVideoWrapper">
-    				<h1 id="footerTitle">Dr. Jeffrey Singer: A Louisiana Lasik Leader</h1>
+    				<h1 id="footerTitle">Dr. Jeffrey Singer: A Louisiana LASIK Leader</h1>
     				<iframe width="560" height="315" src="http://www.youtube.com/embed/T0PsAuUJG7w" frameborder="0" allowfullscreen></iframe>
     				<div id="footerVideo"></div>
     				</div>
