--- a/cataracts.html
+++ b/cataracts.html
@@ -6,9 +6,9 @@
         <title>Dr. Jeffrey Singer | New Orleans LASIK</title>
         
         <meta charset="utf-8">
-        <meta name="description" content="New Orleans Lasik">
-        <meta name="keywords" content="New Orleans Lasik">
-        <meta name="author" content="New Orleans Lasik">
+        <meta name="description" content="New Orleans LASIK">
+        <meta name="keywords" content="New Orleans LASIK">
+        <meta name="author" content="New Orleans LASIK">
         
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<script src="http://cdn.jquerytools.org/1.2.6/full/jquery.tools.min.js"></script>
@@ -189,8 +189,8 @@
     				</form>			
     				</div>
  					<div id="footerVideoWrapper">
-    				<h1 id="footerTitle">Dr. Jeffrey Singer: A Louisiana Lasik Leader</h1>
-    				<iframe width="560" height="315" src="http://www.youtube.com/embed/T0PsAuUJG7w" frameborder="0" allowfullscreen></iframe>
+    				<h1 id="footerTitle">Dr. Jeffrey Singer: A Louisiana LASIK Leader</h1>
+				<iframe width="560" height="315" src="http://www.youtube.com/embed/FeK5xRMc7hw" frameborder="0" allowfullscreen></iframe>
     				<div id="footerVideo"></div>
     				</div>
     				<div id="footerOfficesWrapper">
