--- a/lasik.html
+++ b/lasik.html
@@ -6,9 +6,9 @@
         <title>Dr. Jeffrey Singer | New Orleans LASIK</title>
         
         <meta charset="utf-8">
-        <meta name="description" content="New Orleans Lasik">
-        <meta name="keywords" content="New Orleans Lasik">
-        <meta name="author" content="New Orleans Lasik">
+        <meta name="description" content="New Orleans LASIK">
+        <meta name="keywords" content="New Orleans LASIK">
+        <meta name="author" content="New Orleans LASIK">
         
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<script src="http://cdn.jquerytools.org/1.2.6/full/jquery.tools.min.js"></script>
@@ -72,8 +72,13 @@
     		</div>
     		<div id="contentAreaWrapper">
     			<div id="contentArea">
+			  <h2>ABOUT LASIK</h2>
     			<img src="images/eye.jpg" alt="eye" class="floatLeft" />	
-<p class="autop">For individuals with Myopia (Nearsightedness), Hyperopia (Farsightedness), or Astigmatism there is now a way to improve your vision.  LASIK (Laser in-Situ-Keratomileusis) is a technique that reshapes the surface of the cornea with an excimer laser, thus correcting vision problems.  LASIK is outpatient surgery performed in Dr. Singer's office lasting approximately five to ten minutes.</p>
+<p class="autop">For individuals with Myopia (Nearsightedness), Hyperopia (Farsightedness), or
+Astigmatism there is now a way to improve your vision. LASIK (Laser in-Situ-
+Keratomileusis) is a technique that reshapes the surface of the cornea with an excimer
+laser, thus correcting vision problems. LASIK is outpatient surgery performed in Dr.
+Singer's office lasting approximately five to ten minutes.</p>
 
 
 <img src="./images/clients1.jpg" alt="Dr. Singer with two happy LASIK patients" class="floatRight" />
@@ -88,84 +93,8 @@
 
 <p class="autop">By meeting with Dr. Singer for a free consultation, we can determine if you may benefit from laser vision correction.</p>
 
-<h3>What are the risks of having LASIK?</h3>
 
-<p class="autop">As with any surgical procedure, there are associated risks.  Although rare, they can occur and that is why it is important to meet with your surgeon before you schedule your LASIK procedure.  During this meeting you will not only learn if you are a candidate, but Dr. Singer will explain the benefits and risks of laser vision correction.  Then before having LASIK you can weigh the pluses and minuses as they pertain to your individual situation.  Some risks are:</p>
 
-<ul class="cList">
-	<li>Depending on you prescription (refraction), results may vary.  If you have a very high or very low refraction you may have difficulty seeing 20/20 without glasses or contact lenses.</li>
-
-<li>There is a chance you may be either under or over-corrected.  Only a certain percentage of patients achieve 20/20 after surgery.  Depending on you results additional treatment may be necessary and will be evaluated by Dr. Singer.</li>
-
-<li>LASIK does not eliminate the need for reading glasses either now or in the future.  LASIK is correcting for nearsightedness (Myopia), farsightedness (Hyperopia) and astigmatism.  Presbyopia or the need for reading glasses is not correctable with LASIK.</li>
-
-<li>Further complications, including infection and retinal detachment, although rare, may occur.  This will be fully explained by Dr. Singer during your evaluation.</li>
-</ul>
-<font face="Verdana" size="2" color="#446D8C"><b><font color="#336699">Compare 
-            the differences!</font></b></font> 
-            <table border="1" width="95%" bordercolor="#446D8C" cellpadding="2" cellspacing="0">
-              <tr> 
-                <td width="50%">&nbsp;</td>
-                <td width="25%" align="center" bgcolor="#FFCC33"><font face="Verdana" size="2" color="#FFFFFF"><b>Dr. 
-                  Singer</b></font></td>
-                <td width="25%" align="center" bgcolor="#FFCC33"><font face="Verdana" size="2" color="#FFFFFF"><b>Other 
-                  Lasik Centers</b></font></td>
-              </tr>
-              <tr> 
-                <td width="50%" bgcolor="#669966"><font face="Verdana" size="2">Pre-Op Evaluation Included </font></td>
-                <td width="25%" align="center" bgcolor="#669966"><font face="Verdana" size="2">Yes</font></td>
-                <td width="25%" align="center" bgcolor="#669966"><font face="Verdana" size="2">???</font></td>
-              </tr>
-              <tr bgcolor="#00CCFF"> 
-                <td width="50%"><font face="Verdana" size="2">Post-Op Exams Included </font></td>
-                <td width="25%" align="center"><font face="Verdana" size="2">Yes</font></td>
-                <td width="25%" align="center"><font face="Verdana" size="2">???</font></td>
-              </tr>
-              <tr> 
-                <td width="50%" bgcolor="#669966"><font face="Verdana" size="2">All 
-                  inclusive price with no hidden fees</font></td>
-                <td width="25%" align="center" bgcolor="#669966"><font face="Verdana" size="2">$799.00</font></td>
-                <td width="25%" align="center" bgcolor="#669966"><font face="Verdana" size="2">???</font></td>
-              </tr>
-              <tr bgcolor="#00CCFF"> 
-                <td width="50%"><font face="Verdana" size="2">Extra charge for 
-                  Astigmatism</font></td>
-                <td width="25%" align="center"><font face="Verdana" size="2">No</font></td>
-                <td width="25%" align="center"><font face="Verdana" size="2">???</font></td>
-              </tr>
-              <tr> 
-                <td width="50%" bgcolor="#669966"><font face="Verdana" size="2">Extra 
-                  charge for Farsightedness</font></td>
-                <td width="25%" align="center" bgcolor="#669966"><font face="Verdana" size="2">No</font></td>
-                <td width="25%" align="center" bgcolor="#669966"><font face="Verdana" size="2">???</font></td>
-              </tr>
-              <tr bgcolor="#00CCFF"> 
-                <td width="50%"><font face="Verdana" size="2">Sterile Instruments 
-                  and new blades for each patient</font></td>
-                <td width="25%" align="center"><font face="Verdana" size="2">Yes</font></td>
-                <td width="25%" align="center"><font face="Verdana" size="2">???</font></td>
-              </tr>
-              <tr> 
-                <td width="50%" bgcolor="#669966"> <div align="left"><font face="Verdana, Arial, Helvetica, sans-serif" size="2">3-D 
-                    Active Eye Tracking</font></div></td>
-                <td width="25%" align="center" bgcolor="#669966"><font face="Arial, Helvetica, sans-serif" size="2">Yes<br>
-                  </font><font face="Verdana, Arial, Helvetica, sans-serif" size="2"><font color="#FFCC33">NEW</font> 
-                  Star S4 Active Tra<font face="Arial, Helvetica, sans-serif">k</font></font></td>
-                <td width="25%" align="center" bgcolor="#669966"><font face="Arial, Helvetica, sans-serif" size="2">???</font></td>
-              </tr>
-              <tr bgcolor="#00CCFF"> 
-                <td width="50%"><font face="Verdana, Arial, Helvetica, sans-serif" size="2">Large 
-                  diameter treatments to minimize glare, halos, etc..</font></td>
-                <td width="25%" align="center"><font face="Arial, Helvetica, sans-serif" size="2">Yes</font></td>
-                <td width="25%" align="center"><font face="Arial, Helvetica, sans-serif" size="2">???</font></td>
-              </tr>
-              <tr bgcolor="#669966"> 
-                <td>Wave Front Technology</td>
-                <td align="center">VISX Wave Scan</td>
-                <td align="center">???</td>
-              </tr>
-            </table>
-<br />
 
 
 <h3>How do I choose the right doctor?</h3>
@@ -211,11 +140,25 @@
 
 <h3>During Surgery</h3>
 
-<p class="autop">This is an outpatient procedure that will last approximately 5-10 minutes per eye.  You will be positioned in a comfortable, reclining chair and be given numbing drops in both eyes.  You may experience slight discomfort from the suction applied as the surgeon creates a protective flap from your cornea.  The laser is applied for up to 90 seconds per eye, depending on your prescription, at which time you'll hear rapid clicking caused by the pulsating laser.  This is the laser removing the appropriate amount of corneal tissue.  The surgeon will then replace the protective flap and you will be fitted with a protective eye shield.</p>
+<p class="autop">This is an outpatient procedure that will last approximately 5-10 minutes per eye. You
+will be positioned in a comfortable, reclining chair and be given numbing drops in both
+eyes. You may experience slight discomfort from the suction applied as the surgeon
+creates a protective flap from your cornea. The laser is applied for up to 90 seconds per
+eye, depending on your prescription, at which time you'll hear rapid clicking caused by
+the pulsating laser. This is the laser removing the appropriate amount of corneal tissue.
+The surgeon will then replace the protective flap and you will be fitted with a protective
+eye shield.</p>
 
 <h3>LASIK Diagram</h3>
 
-<p class="autop">After you eyes have been completely numbed using "eye drop" anesthesia, an eyelid holder will be placed between your eyelids to prevent you from blinking.  Next, an instrument known as microkeratome makes a protective flap in the cornea (Figure 1 and 2).  During this process you may feel a little pressure, but no discomfort.  You will be asked to look directly at the target light while the laser reshapes the cornea, usually in less than a minute (Figure 3).  Then, the protective flap is folded back in place (Figure 4 and 5) where it bonds securely without the need for stitches.  After LASIK, some patients report a slight discomfort that usually goes away within twelve to twenty-four hours.</p>
+<p class="autop">After you eyes have been completely numbed using "eye drop" anesthesia, an eyelid
+holder will be placed between your eyelids to prevent you from blinking. Next, an
+instrument known as microkeratome makes a protective flap in the cornea (Figure 1
+and 2). During this process you may feel a little pressure, but no discomfort. You will be
+asked to look directly at the target light while the laser reshapes the cornea, usually in
+less than a minute (Figure 3). Then, the protective flap is folded back in place (Figure 4
+and 5) where it bonds securely without the need for stitches. After LASIK, some patients
+report a slight discomfort that usually goes away within twelve to twenty-four hours.</p>
 
 <img id="lasikDiagram" src="images/lasikDiagram.jpg" alt="lasik Diagram" class="clearBoth" />
 
@@ -249,17 +192,62 @@
 
 <li>Use artificial tears given to you after surgery as often as needed for dry eyes or discomfort.</li>
 </ul>
+
+<h3>What are the risks of having LASIK?</h3>
+
+<p class="autop">As with any surgical procedure, there are associated risks. Although rare, they can
+occur and that is why it is important to meet with your surgeon before you schedule your
+LASIK procedure. During this meeting you will not only learn if you are a candidate,
+but Dr. Singer will explain the benefits and risks of laser vision correction. Then before
+having LASIK you can weigh the pluses and minuses as they pertain to your individual
+situation. Some risks are:</p>
+
+<ul class="cList">
+  <li>Depending on you prescription (refraction), results may vary. If you have a
+very high or very low refraction you may have difficulty seeing 20/20 without glasses
+or contact lenses.</li>
+
+<li>There is a chance you may be either under or over-corrected. Only a certain
+percentage of patients achieve 20/20 after surgery. Depending on you results
+additional treatment may be necessary and will be evaluated by Dr. Singer.</li>
+
+<li>LASIK does not eliminate the need for reading glasses either now or in
+the future. LASIK is correcting for nearsightedness (Myopia), farsightedness
+(Hyperopia) and astigmatism. Presbyopia or the need for reading glasses is not
+correctable with LASIK.</li>
+
+<li>Further complications, including infection and retinal detachment, although
+rare, may occur. This will be fully explained by Dr. Singer during your evaluation.</li>
+</ul>
+
 <h2>INFORMED CONSENT FOR LASER IN-SITU KERATOMILEUSIS (LASIK)</h2>
 
 <h3>Introduction</h3>
 
-<p class="autop">This information is being provided to you so that you can make an informed decision about the use of a device known as a microkeratome, combined with the use of advice known as an excimer laser, to perform LASIK.  LASIK is one of a number of alternatives for correcting refractive error in LASIK; the microkeratome is used to shave the cornea to create a flap.  The flap then is opened like the page of a book to expose tissue just below the cornea’s surface.  Next, the excimer laser is used to remove ultra-thin layers from the cornea to reshape it to reduce refractive error.  Finally, the flap is returned to it’s original position without sutures.</p>
+<p class="autop">This information is being provided to you so that you can make an informed decision
+about the use of a device known as a microkeratome, combined with the use of advice
+known as an excimer laser, to perform LASIK. LASIK is one of a number of alternatives
+for correcting refractive error in LASIK; the microkeratome is used to shave the cornea
+to create a flap. The flap then is opened like the page of a book to expose tissue just
+below the cornea’s surface. Next, the excimer laser is used to remove ultra-thin layers
+from the cornea to reshape it to reduce refractive error. Finally, the flap is returned to it’s
+original position without sutures.</p>
 
-<p class="autop">LASIK is an elective procedure:  There is no emergency condition or other reason that requires or demands that you have it performed.  You could continue wearing contact lenses or glasses and have adequate visual acuity.  This procedure, like all surgery, presents some risks.  Many of which are listed below.  You should also understand that there may be other risks not known to your doctor which may become known later.  Despite the best of care, complications and side effects may occur; should this happen in your case, the result might be affected even to the extent of making your vision worse.</p>
+<p class="autop">LASIK is an elective procedure: There is no emergency condition or other reason that
+requires or demands that you have it performed. You could continue wearing contact
+lenses or glasses and have adequate visual acuity. This procedure, like all surgery,
+presents some risks. Many of which are listed below. You should also understand that
+there may be other risks not known to your doctor which may become known later.
+Despite the best of care, complications and side effects may occur; should this happen
+in your case, the result might be affected even to the extent of making your vision
+worse.</p>
 
 <h3>Alternatives to LASIK</h3>
 
-<p class="autop">If you decide not to have LASIK, there are other methods of correcting your refractive error.  These alternatives include, among others, eyeglasses, contact lenses, Radial Keratotomy (RK),  Automated Lamellar Keratosplasty (ALK) and Photo refractive Keratotomy (PRK).</p>
+<p class="autop">If you decide not to have LASIK, there are other methods of correcting your refractive
+error. These alternatives include, among others, eyeglasses, contact lenses, Radial
+Keratotomy (RK), Automated Lamellar Keratosplasty (ALK) and Photo refractive
+Keratotomy (PRK).</p>
 
 <h3>PATIENT CONSENT</h3>
 
@@ -313,7 +301,6 @@
 
 <li>I understand that, as with all types of surgery, there is a possibility of complications due to anesthesia, drug reactions or other factors that may involve other parts of my body.  I understand that since it is impossible to state every complication that may occur as a result of any surgery, the list of complications in this form may not be complete.</li></ul>
 
-<p id="aboutEnd">Dr. Singer has performed thousands of laser vision correction procedures on four different lasers and now exclusively uses the VISX Star S4 IR laser to perform all LASIK procedures.</p>
     			</div>
     		</div>
     		<div id="footerWrapper">
@@ -332,7 +319,7 @@
     				</form>			
     				</div>
  					<div id="footerVideoWrapper">
-    				<h1 id="footerTitle">Dr. Jeffrey Singer: A Louisiana Lasik Leader</h1>
+    				<h1 id="footerTitle">Dr. Jeffrey Singer: A Louisiana LASIK Leader</h1>
     				<iframe width="560" height="315" src="http://www.youtube.com/embed/T0PsAuUJG7w" frameborder="0" allowfullscreen></iframe>
     				<div id="footerVideo"></div>
     				</div>
