--- a/singerAndStaff.html
+++ b/singerAndStaff.html
@@ -6,9 +6,9 @@
         <title>Dr. Jeffrey Singer | New Orleans LASIK</title>
         
         <meta charset="utf-8">
-        <meta name="description" content="New Orleans Lasik">
-        <meta name="keywords" content="New Orleans Lasik">
-        <meta name="author" content="New Orleans Lasik">
+        <meta name="description" content="New Orleans LASIK">
+        <meta name="keywords" content="New Orleans LASIK">
+        <meta name="author" content="New Orleans LASIK">
         
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<script src="http://cdn.jquerytools.org/1.2.6/full/jquery.tools.min.js"></script>
@@ -98,7 +98,7 @@
     					<span id="staffName">Dr. Stephen Brint, M.D., FACS</span>
     					</div>
     					<div class="staffDescription">
-    						<p>Dr. Brint was the first physician in the United States to perform the Lasik procedure in June 1991, after working with Dr. Lucio Buratto in Milan to perfect the technique. He was the medical monitor of the first US FDA Lasik study and has been a lead investigator for both the Alcon Custom Cornea Lasik procedure as well as the Medical Monitor for all of the US FDA Wavelight Allegretto Wavefront Optimized and Custom Studies. He graduated from Tulane University School of Medicine, New Orleans, Louisiana and completed his residency there as well in 1977, continuing to serve as Associate Clinical Professor of Ophthalmology. In addition to his vast Lasik experience of over 30,000 Lasik procedures, many with the Intralase All Laser Lasik technique, he is a renowned cataract/lens surgeon, having participated in the FDA clinical trials of the new intraocular lenses including ReSTOR and ReZOOM, which typically allow the patient to have excellent vision both distance and near without glasses after cataract or lens extraction.
+    						<p>Dr. Brint was the first physician in the United States to perform the LASIK procedure in June 1991, after working with Dr. Lucio Buratto in Milan to perfect the technique. He was the medical monitor of the first US FDA LASIK study and has been a lead investigator for both the Alcon Custom Cornea LASIK procedure as well as the Medical Monitor for all of the US FDA Wavelight Allegretto Wavefront Optimized and Custom Studies. He graduated from Tulane University School of Medicine, New Orleans, Louisiana and completed his residency there as well in 1977, continuing to serve as Associate Clinical Professor of Ophthalmology. In addition to his vast LASIK experience of over 30,000 LASIK procedures, many with the Intralase All Laser LASIK technique, he is a renowned cataract/lens surgeon, having participated in the FDA clinical trials of the new intraocular lenses including ReSTOR and ReZOOM, which typically allow the patient to have excellent vision both distance and near without glasses after cataract or lens extraction.
 
 Dr. Singer and his associate will always be available for any eye problems you may have.</p>
     					</div>
@@ -140,7 +140,7 @@ Dr. Singer and his associate will always be available for any eye problems you m
 			                <div class="staffPicture floatLeft multiple">
     					<img src="images/taniaP.jpg" alt="Tania Pelman, COA" />
     					<span id="staffName">Tania Pelman, COA</span>
-					<span class="staffTitle">Lasik Coordinator</span>
+					<span class="staffTitle">LASIK Coordinator</span>
     					</div>					
 					<div class="staffPicture floatLeft multiple">
     					<img src="images/janiceJ.jpg" alt="Janice Joliboix, COA" />
@@ -222,7 +222,7 @@ Dr. Singer and his associate will always be available for any eye problems you m
     				</form>			
     				</div>
  					<div id="footerVideoWrapper">
-    				<h1 id="footerTitle">Dr. Jeffrey Singer: A Louisiana Lasik Leader</h1>
+    				<h1 id="footerTitle">Dr. Jeffrey Singer: A Louisiana LASIK Leader</h1>
     				<div id="footerVideo"><iframe width="560" height="315" src="http://www.youtube.com/embed/T0PsAuUJG7w" frameborder="0" allowfullscreen></iframe></div>
 
     				</div>
